fix: emblem increase weight

--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -107,7 +107,7 @@
   priority: 1
   apply:
     type: modifyStat
-    target: self
+    target: updateStatContext
     statType: weight
     delta: 10
     percent: 0
