--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -748,8 +748,7 @@
   priority: 0
   apply:
     type: modifyStat
-    target:
-      base: updateStatContext
+    target: updateStatContext
     statType: weight
     percent: 0
     delta:
