--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -102,3 +102,4 @@ mark_zaoyin: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/m
 mark_yinzhiwang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3052.png'
 mark_global_qingtian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20001.png'
 mark_rouhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3012.png'
+mark_zhifanghudun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4000.png'
