--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -77,6 +77,13 @@
     <<: *apply_foe_statstage_-1_template
     statType: def
   condition: *condition_probability_10_percent_template
+- id: effect_skill_reduce_foe_spa_10_percent
+  trigger: OnDamage
+  priority: 0
+  apply:
+    <<: *apply_foe_statstage_-1_template
+    statType: spa
+  condition: *condition_probability_10_percent_template
 - id: effect_skill_raise_atk_1_stages
   trigger: BeforeHit
   priority: 0
@@ -1314,7 +1321,7 @@
     conditions:
       - type: selfUseSkill
 - id: effect_skill_add_accuracy_when_reused
-  trigger: BeforeUseSkillCheck
+  trigger: AfterUseSkillCheck
   priority: 0
   apply:
     type: addAccuracy
@@ -1429,7 +1436,7 @@
                     type: dynamic
                     arg: level
 - id: effect_skill_increase_accuracy_50_if_higher_level
-  trigger: BeforeUseSkillCheck
+  trigger: AfterUseSkillCheck
   priority: 0
   apply:
     type: addAccuracy
@@ -2009,9 +2016,9 @@
       type: entity:baseMark
       value: mark_manxingduyao
     stack: 1
-  condition:
+  condition: &condition_probability_70_percent_template
     type: every
-    conditions: &condition_probability_70_percent_template
+    conditions:
       - type: selfUseSkill
       - type: evaluate
         target: self
@@ -2135,3 +2142,263 @@
     type: every
     conditions:
       - type: selfUseSkill
+- id: effect_skill_reduce_foe_spe_20_percent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    <<: *apply_foe_statstage_-1_template
+    statType: spe
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - &condition_probability_20_percent_template
+        type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent: 20
+- id: effect_skill_raise_spe_70_percent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    <<: *apply_self_statstage_+1_template
+    statType: spe
+  condition: *condition_probability_70_percent_template
+- id: effect_skill_add_mark_kongqichuliang_100
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_kongqichuliang
+    stack: 100
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+- id: effect_skill_consume_mark_kongqichuliang_10_if_fail_reduce_damage_25_percent
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: conditional
+    condition:
+      type: evaluate
+      target: &mark_kongqichuliang_stack_template
+        base: selfMarks
+        chain:
+          - type: whereAttr
+            extractor:
+              type: base
+              arg: baseId
+            evaluator:
+              type: same
+              value: mark_kongqichuliang
+          - type: select
+            arg:
+              type: base
+              arg: stack
+      evaluator:
+        type: compare
+        operator: '>='
+        value: 10
+    trueOperator:
+      type: consumeStacks
+      target: &mark_kongqichuliang_template
+        base: selfMarks
+        chain:
+          - type: whereAttr
+            extractor:
+              type: base
+              arg: baseId
+            evaluator:
+              type: same
+              value: mark_kongqichuliang
+      value: 10
+    falseOperator: &reduce_damage_25_percent_opreator
+      type: addModified
+      target: damageContext
+      percent: -25
+      delta: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+- id: effect_skill_consume_mark_kongqichuliang_15_if_fail_effect_skill_reduce_damage_25_percent
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: conditional
+    condition:
+      type: evaluate
+      evaluator:
+        type: compare
+        operator: '>='
+        value: 15
+      target: *mark_kongqichuliang_stack_template
+    trueOperator:
+      type: consumeStacks
+      target: *mark_kongqichuliang_template
+      value: 15
+    falseOperator: *reduce_damage_25_percent_opreator
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+- id: effect_skill_consume_mark_kongqichuliang_20_if_fail_effect_skill_reduce_damage_25_percent
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: conditional
+    condition:
+      type: evaluate
+      evaluator:
+        type: compare
+        operator: '>='
+        value: 20
+      target: *mark_kongqichuliang_stack_template
+    trueOperator:
+      type: consumeStacks
+      target: *mark_kongqichuliang_template
+      value: 20
+    falseOperator: *reduce_damage_25_percent_opreator
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+- id: effect_skill_consume_mark_kongqichuliang_25_if_fail_effect_skill_reduce_damage_25_percent
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: conditional
+    condition:
+      type: evaluate
+      target: *mark_kongqichuliang_stack_template
+      evaluator:
+        type: compare
+        operator: '>='
+        value: 25
+    trueOperator:
+      type: consumeStacks
+      target: *mark_kongqichuliang_template
+      value: 25
+    falseOperator: *reduce_damage_25_percent_opreator
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+- id: effect_skill_add_mark_kongqihudun_stack_with_kongqichuliang_stack
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_kongqihudun
+    stack:
+      type: dynamic
+      selector: *mark_kongqichuliang_stack_template
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor: baseId
+              evaluator:
+                type: same
+                value: mark_kongqichuliang
+        evaluator:
+          type: exist
+- id: effect_skill_consume_all_kongqichuliang
+  trigger: OnHit
+  priority: -50
+  apply:
+    type: consumeStacks
+    target:
+      base: selfMarks
+      chain:
+        - type: whereAttr
+          extractor:
+            type: base
+            arg: baseId
+          evaluator:
+            type: same
+            value: mark_kongqichuliang
+    value: 100
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor: baseId
+              evaluator:
+                type: same
+                value: mark_kongqichuliang
+        evaluator:
+          type: exist
+- id: effect_skill_add_damage_by_kongqichuliang
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 0
+    delta:
+      type: dynamic
+      selector: *mark_kongqichuliang_stack_template
+  condition:
+    type: selfUseSkill
+- id: effect_skill_add_mark_foe_zhixi
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: foe
+    mark:
+      type: entity:baseMark
+      value: mark_zhixi
+  condition:
+    type: selfUseSkill
+- id: effect_skill_heal_self_eighth
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: heal
+    target:
+      base: self
+    value:
+      type: dynamic
+      selector:
+        base: self
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: maxHp
+          - type: divide
+            arg: 8
+  condition:
+    type: selfUseSkill
+- id: effect_skill_heal_self_by_kongqi
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: heal
+    target:
+      base: self
+    value:
+      type: dynamic
+      selector: *mark_kongqichuliang_stack_template
+  condition:
+    type: selfUseSkill
