--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -1341,7 +1341,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_reduce_foe_spd_1_stage
+    - effect_skill_reduce_foe_spe_1_stage
 - id: skill_zhimingshuiqiang
   element: Water
   category: Special
@@ -1643,3 +1643,171 @@
   tags: []
   effect:
     - effect_skill_add_mark_judushenti
+- id: skill_chouda
+  element: Normal
+  category: Physical
+  power: 40
+  rage: 0
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spe_5_percent
+- id: skill_penshui
+  element: Water
+  category: Special
+  power: 60
+  rage: 5
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spa_5_percent
+- id: skill_mozhipao
+  element: Water
+  category: Special
+  power: 65
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spe_20_percent
+- id: skill_kongqitianchong
+  element: Normal
+  category: Status
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_kongqichuliang_100
+    - effect_skill_raise_spe_70_percent
+- id: skill_kongqipao
+  element: Normal
+  category: Special
+  power: 100
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_consume_mark_kongqichuliang_10_if_fail_reduce_damage_25_percent
+- id: skill_mozhipenshe
+  element: Water
+  category: Special
+  power: 110
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_consume_mark_kongqichuliang_15_if_fail_effect_skill_reduce_damage_25_percent
+- id: skill_gaoyashuipao
+  element: Water
+  category: Special
+  power: 130
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_consume_mark_kongqichuliang_20_if_fail_effect_skill_reduce_damage_25_percent
+- id: skill_mozhishuiyu
+  element: Water
+  category: Status
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_mingzhongxiajiang_15
+- id: skill_lianxuchouda
+  element: Normal
+  category: Physical
+  power: 40
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  multihit: 3
+- id: skill_kongqihudun
+  element: Normal
+  category: Status
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_kongqihudun_stack_with_kongqichuliang_stack
+    - effect_skill_consume_all_kongqichuliang
+- id: skill_yasuoningjupao
+  element: Water
+  category: Climax
+  power: 165
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spa_10_percent
+- id: skill_gaoyakongqi
+  element: Normal
+  category: Special
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_damage_by_kongqichuliang
+    - effect_skill_consume_all_kongqichuliang
+- id: skill_zhixi
+  element: Normal
+  category: Status
+  power: 0
+  rage: 25
+  accuracy: 50
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_zhixi
+- id: skill_luoxuanshuiqiang
+  element: Water
+  category: Special
+  power: 140
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_consume_mark_kongqichuliang_25_if_fail_effect_skill_reduce_damage_25_percent
+- id: skill_kongqizhiyu
+  element: Normal
+  category: Status
+  power: 0
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_heal_self_eighth
+    - effect_skill_heal_self_by_kongqi
