--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -103,3 +103,4 @@ mark_yinzhiwang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/p
 mark_global_qingtian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/20001.png'
 mark_rouhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3012.png'
 mark_zhifanghudun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4000.png'
+mark_kongqihudun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4001.png'
